tests/data/empty-host-ingress-mergeable/empty-host-master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  rules:
    - host: ""
