tests/data/empty-host-ingress-mergeable/empty-host-minion1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: empty-host-minion1
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
